# human2robotpose

./: CMakeLists.txt  package.xml  pose_estimation.py
demos/: skeletal_model.py
src/: human2robotpose_application.py  human2robotpose_implementation.py  realsense_image_publisher.py
